Added photo upload for subcategories
This is still a work-in-progress.

--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -69,5 +69,9 @@ html lang="en-US"
 
     = javascript_include_tag 'notice'
 
+    / ajax file uploading
+    = javascript_include_tag 'support/swfobject'
+    = javascript_include_tag 'support/jquery.uploadify.v2.1.0'
+
     - if Rails.env.production?
       = javascript_include_tag 'google-analytics'
