--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -151,54 +151,6 @@
         td.wtab data-wid="{{ wids[2] }}"
           div {{ wtabNames[2] }}
 
-  / data taken from mobile/base.js : getIconData()
-  script.sidebar-widget(type="text/template")
-    .sidebar.home-icon class="{{ singletonClass }}" data-wtype="{{ wtype }}" data-wsubtype="{{ wsubtype }}"
-      img.add.right src="/images/ui/plus.png"
-      img.add.left src="/images/ui/plus.png"
-      img.icon{ src="/images/widgets/{{ iconName }}.png" }
-      .title
-        | {{ name }}
-  
-  script.add-widget-dialog(type="text/template")
-    #dialog-confirm title="Please Rename your Widget"
-  	  p
-  	    span class="ui-icon ui-icon-alert" style="float:left; margin:0 7px 20px 0;"
-  	    | Please rename your widget:
-        input type="text" value="{{ defaultName }}" name="wname"
-        | <% if(_maybe.error) { %>
-        p.error Error: {{ _maybe.error }}
-        | <% } %>
-  
-  script.add-subcat-dialog(type="text/template")
-    #dialog-confirm title="Add New {{ typeName }}"
-      p
-        | {{ typeName }} name:
-        br
-        input type="text" value="{{ _maybe.name }}" name="cat"
-        input.add-btn type="button" value="Add"
-        | <% if(_maybe.error) { %>
-        p.error Error: {{ _maybe.error }}
-        | <% } %>
-        | <% if (addedCats.length > 0) { %>
-        .other-names
-    	    b Added <% print( util.pluralize(typeName) ); %>:
-    	    ul
-      	    | <% for(var i=0; i < addedCats.length; i++) { %>
-      	    |    <li> {{ addedCats[i] }} </li>
-      	    |  <% } %>
-        | <% } %>
-  
-  script.edit-subcat-dialog(type="text/template")
-    #dialog-confirm title="Rename"
-      p
-        | New {{ typeName }} name:
-        br
-        input type="text" value="{{ _maybe.name }}" name="cat"
-        | <% if(_maybe.error) { %>
-        p.error Error: {{ _maybe.error }}
-        | <% } %>
-
   script.widget-page(type="text/template")
     .page
       .back-bar
@@ -405,7 +357,17 @@
   
   script.category-cat(type="text/template")
     .category.item class="{{ cycle }}" data-id="{{ cat._id }}"
+      | <% if (cat.wphotoUrl) { %>
+      table
+        tbody
+          tr
+            td
+              img src="{{ cat.wphotoUrl }}"
+            td
+              | {{ cat.name }}
+      | <% } else { %>
       | {{ cat.name }}
+      | <% } %>
 
   script.category-page(type="text/template")
     | <% for (var i=0; i<stuff.length;i++) {
@@ -547,56 +509,6 @@
     
     label Paste your "Embed this Calendar" link here:
     textarea(name="paste" type="text") {{ _maybe.description }}
-  
-  script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.property-listings-edit-area.locations-edit-area(type="text/template")
-    | <% if (onHomePage === true) { %>
-    input type="button" name="beginEditing" value="Click Here to Start Editing"
-
-    | <% } else if (currentNodeType !== 'page') { %>
-    br
-    .crumb-wrap
-      b Editing:
-      br
-      b.blue {{ catCrumbs }}
-
-    select name="stuff" multiple="multiple"
-      | <% for (var i=0;i<stuff.length;i++) { %>
-      option data-type="{{ stuff[i].type }}" value="{{ stuff[i]._id }}"
-        | {{ bulletTypes[ stuff[i].type ] }} {{ stuff[i].name }}
-      | <% } %>
-    br
-    
-    | <%  if (stuff.length >= 2) { %>
-    input.rfloat.down-arrow type="button" name="move_down" data-mod="1" value="&#9660;"
-    input.rfloat.up-arrow type="button" name="move_up" data-mod="-1" value="&#9650;"
-    | <%  } %>
-
-    | <%       if (isThereStuff == true) { %>
-    input type="button" name="rename" value="Rename"
-    input type="button" name="edit" value="Edit"
-    input type="button" name="delete" value="Delete"
-    | <%       } %>
-
-    br
-    .divider
-
-    input type="button" name="back" value="< Back"
-    .button-divider.lfloat
-    input type="button" name="add_cat" value="Add {{ catLabel }}"
-    input type="button" name="add_item" value="Add {{ itemLabel }}"
-
-    | <% } else { %>
-    br
-    b Editing page:
-    br
-    b.blue {{ catCrumbs }}
-    br
-    br
-    #jeditor-wrapper
-      textarea#jeditor {{ content }}
-    br
-    input type="button" name="back" value="< Back"
-    | <% } %>
 
 #wname-test
 #cat-crumbs-test
