--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -423,6 +423,9 @@ div.wysiwyg ul.toolbar {
   #builder .edit-area.category .icon-wrap img, #builder .edit-area.page_tree .icon-wrap img {
     width: 18px;
     height: 18px; }
+#builder .edit-area.category .wphoto-wrap > *, #builder .edit-area.page_tree .wphoto-wrap > * {
+  float: left;
+  margin-left: 5px; }
 #builder .edit-area.category .crumb-wrap, #builder .edit-area.page_tree .crumb-wrap {
   padding: 1px 0 0 0; }
 #builder .edit-area.category select, #builder .edit-area.page_tree select {
@@ -542,3 +545,26 @@ div.wysiwyg ul.toolbar {
 #mobile-container .page .content.category .item:hover, #mobile-container .page .content.page_tree .item:hover {
   background-color: #d8dfea;
   cursor: pointer; }
+
+.uploadifyQueueItem {
+  border: 1px solid #ccc;
+  background: #e4edf8;
+  padding: 10px; }
+
+.uploadifyError {
+  border: 1px solid #dd3c10 !important;
+  background: #ffebe8 !important; }
+
+.uploadifyQueueItem .cancel {
+  float: right; }
+
+.uploadifyProgress {
+  background-color: #333;
+  border: 1px inset #818181;
+  margin-top: 8px;
+  width: 100%; }
+
+.uploadifyProgressBar {
+  background-color: #d8dfea;
+  width: 1px;
+  height: 3px; }
