Fixed formatting. Added <br> between paragraphs.

--- a/app/views/home/privacy.html
+++ b/app/views/home/privacy.html
@@ -5,32 +5,40 @@
 <h3>What information do we collect? </h3>
 
 <p>We collect information from you when you register on our site or fill out a form.</p>
-
+<br>
 <p>When ordering or registering on our site, as appropriate, you may be asked to enter your: name, e-mail address, mailing address or phone number. You may, however, visit our site anonymously.</p>
-
-<p>Google, as a third party vendor, uses cookies to serve ads on our site. Google's use of the DART cookie enables it to serve ads to your users based on their visit to our site and other sites on the Internet. Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy..</p>
+<br>
+<p>Google, as a third party vendor, uses cookies to serve ads on our site. Google's use of the DART cookie enables it to serve ads to your users based on their visit to our site and other sites on the Internet. Users may opt out of the use of the DART cookie by visiting the Google ad and content network privacy policy.</p>
 
 <h3>What do we use your information for?</h3>
 
 <p>Any of the information we collect from you may be used in one of the following ways:</p>
-
-<p>1.  To personalize your experience<br />
-(your information helps us to better respond to your individual needs)</p>
-
-<p>2.  To improve our website<br />
-(we continually strive to improve our website offerings based on the information and feedback we receive from you)</p>
-
-<p>3.  To improve customer service<br />
-(your information helps us to more effectively respond to your customer service requests and support needs)</p>
-
-<p>4.  To process transactions<br />
-Your information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other than for the express purpose of delivering the purchased product or service requested.</p>
-
-<p>5.  To administer a contest, promotion, survey or other site feature</p>
- 
-<p>6.  To send periodic emails<br />
-Note: If at any time you would like to unsubscribe from receiving future emails, we include detailed unsubscribe instructions at the bottom of each email.</p>
-
+<br>
+<ol>
+<li>
+To personalize your experience<br />
+(your information helps us to better respond to your individual needs)
+</li>
+<li>
+To improve our website<br />
+(we continually strive to improve our website offerings based on the information and feedback we receive from you)
+</li>
+<li>
+To improve customer service<br />
+(your information helps us to more effectively respond to your customer service requests and support needs)
+</li>
+<li>
+To process transactions<br />
+Your information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other than for the express purpose of delivering the purchased product or service requested.
+</li>
+<li>
+To administer a contest, promotion, survey or other site feature
+</li>
+<li>
+To send periodic emails<br />
+Note: If at any time you would like to unsubscribe from receiving future emails, we include detailed unsubscribe instructions at the bottom of each email.
+</li>
+</ol>
 <h3>How do we protect your information?</h3>
 
 <p>We implement a variety of security measures to maintain the safety of your personal information when you enter, submit, or access your personal information.</p>
@@ -38,9 +46,9 @@ Note: If at any time you would like to unsubscribe from receiving future emails,
 <h3>Do we use cookies?</h3>
 
 <p>Yes (Cookies are small files that a site or its service provider transfers to your computer’s hard drive through your Web browser (if you allow) that enables the sites or service providers systems to recognize your browser and capture and remember certain information</p>
-
+<br>
 <p>We use cookies to understand and save your preferences for future visits, keep track of advertisements and compile aggregate data about site traffic and site interaction so that we can offer better site experiences and tools in the future. We may contract with third-party service providers to assist us in better understanding our site visitors. These service providers are not permitted to use the information collected on our behalf except to help us conduct and improve our business.</p>
-
+<br>
 <p>If you prefer, you can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies via your browser settings. Like most websites, if you turn your cookies off, some of our services may not function properly. However, you can still place orders by contacting customer service.</p>
 
 <h3>Do we disclose any information to outside parties?</h3>
@@ -54,7 +62,7 @@ Note: If at any time you would like to unsubscribe from receiving future emails,
 <h3>California Online Privacy Protection Act Compliance</h3>
 
 <p>Because we value your privacy we have taken the necessary precautions to be in compliance with the California Online Privacy Protection Act. We therefore will not distribute your personal information to outside parties without your consent.</p>
-
+<br>
 <p>As part of the California Online Privacy Protection Act, all users of our site may make any changes to their information at anytime by logging into our sign-in page and going to the 'Edit Profile' page.</p>
 
 <h3>Children’s Online Privacy Protection Act Compliance</h3>
@@ -82,11 +90,12 @@ Note: If at any time you would like to unsubscribe from receiving future emails,
 <h3>Contacting Us</h3>
 
 <p>If there are any questions regarding this privacy policy you may contact us using the information below.</p>
-
-<p>www.YoMobi.com<br />
-Austin, Texas 78701<br />
+<br>
+<p><a href="http://www.yomobi.com">www.YoMobi.com</a><br />
+Austin, Texas<br>
+78701<br />
 USA<br />
-support@yomobi.com<br />
+<a href="mailto:support@yomobi.com">support@yomobi.com</a><br />
 </p>
 
 </div>
