--- a/app/views/layouts/builder.slim
+++ b/app/views/layouts/builder.slim
@@ -70,8 +70,7 @@ html lang="en-US"
     = javascript_include_tag 'notice'
 
     / ajax file uploading
-    = javascript_include_tag 'support/swfobject'
-    = javascript_include_tag 'support/jquery.uploadify.v2.1.0'
+    = javascript_include_tag "plupload/plupload.full"
 
     - if Rails.env.production?
       = javascript_include_tag 'google-analytics'
