Added rename link; removed rename buton

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -113,6 +113,9 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
     br
 
     .crumb-wrap
+      | <% if (onRootPage !== true) { %>
+      a.rename-link href="#" Rename
+      | <% } %>
       b Editing:
       br
       b.blue {{ catCrumbs }}
@@ -139,7 +142,6 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
     | <%  } %>
 
     | <%       if (isThereStuff == true) { %>
-    input type="button" name="rename" value="Rename"
     input type="button" name="edit" value="Edit"
     input type="button" name="delete" value="Delete"
     | <%       } %>
@@ -154,10 +156,11 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
 
     | <% } else { %>
     br
-    b Editing page:
-    br
-    b.blue {{ catCrumbs }}
-    br
+    .crumb-wrap
+      a.rename-link href="#" Rename
+      b Editing Page:
+      br
+      b.blue {{ catCrumbs }}
     br
     #jeditor-wrapper
       textarea#jeditor {{ content }}
