--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -428,6 +428,9 @@ div.wysiwyg ul.toolbar {
   margin-left: 5px; }
 #builder .edit-area.category .crumb-wrap, #builder .edit-area.page_tree .crumb-wrap {
   padding: 1px 0 0 0; }
+  #builder .edit-area.category .crumb-wrap .rename-link, #builder .edit-area.page_tree .crumb-wrap .rename-link {
+    float: right;
+    font-weight: bold; }
 #builder .edit-area.category select, #builder .edit-area.page_tree select {
   width: 360px;
   margin: 2px 0;
