Remove link now works on item dialogs.
Also moved the no-wphoto image path to the global object.

--- a/app/views/builder/_cat-dialog-templates.slim
+++ b/app/views/builder/_cat-dialog-templates.slim
@@ -8,6 +8,9 @@ script.item-dialog(type="text/template")
     | {{ innerContent }}
     .wphoto-wrap
       img src="{{ wphotoPreviewPath }}"
+      | <% if (wphotoPreviewPath !== '/images/no-wphoto.png') { %>
+      a.remove-wphoto-link Remove
+      | <% } %>
       br
       .uploader-browse-button.pretty-button name="pick_files" Pick files
       .debug
