--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -32,7 +32,9 @@ window.g = {
     '_method': 'post',
     'authenticity_token': encodeURIComponent('<%= authenticity_token %>'),
     'auth_token': '<%= @user.authentication_token %>'
-  }
+  },
+
+  noPhotoPath: '/images/no-wphoto.png'
 };
 window.widgetClasses = {};
 window.widgetPages = {};
