Added customer email to leave_msg email content.

--- a/app/views/user_mailer/leave_msg.html.erb
+++ b/app/views/user_mailer/leave_msg.html.erb
@@ -4,6 +4,8 @@ A visitor to <a href="<%= @params[:company_mobile_url] %>">your YoMobi site</a> 
 
 Name: <%= @params[:customer_name] %>
 <br />
+Email: <%= @params[:customer_email] %>
+<br />
 Subject: <%= @params[:customer_subject] %>
 <br />
 <br />
