--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -22,4 +22,4 @@ ul
   li.spacer
   li.option.builder class=active?('builder',active)
     .icon
-    a href=builder_main_path Mobile Website Bulider
+    a href=builder_main_path Mobile Website Builder
