Updated invalid drag message

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -210,8 +210,9 @@
   #dialog-invalid-drag title="Oops"
     p
       span.ui-icon.ui-icon-alert style="float:left"
-      | New widgets can only be added to the mobile home screen.
-    p Please return to the mobile home screen and try adding again.
+      | &nbsp; New widgets can only be added from the mobile home screen.
+    p <br>
+    p Please click on Home in the Mobile Tab Bar to return to the mobile home screen and try adding again.
 
   / =============================
   / = Category Add-Item Dialogs =
