Fixed category add button and other minor bugs.

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -30,7 +30,7 @@ script.add-subcat-dialog(type="text/template")
         .debug
       input type="hidden" value="" name="wphotoUrl"
 
-      input.add-btn type="button" value="Add"
+      input name="add" type="button" value="Add"
 
       | <% if(_maybe.error) { %>
       p.error Error: {{ _maybe.error }}
