--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -133,7 +133,7 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
         | <% if (wphotoPreviewPath !== '/images/no-wphoto.png') { %>
         tr
           td
-            a.remove-wphoto-link Remove Picture
+            a.remove-wphoto-link href="#" Remove Picture
           td
         | <% } %>
     | <% } %>
