--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -242,7 +242,8 @@ p {
   padding: 0 10px 20px 8px !important; }
   .page .content.category .item, .page .content.page_tree .item {
     padding: 16px 0px 16px 0px;
-    font-size: 16px; }
+    font-size: 16px;
+    overflow: auto; }
     .page .content.category .item > div, .page .content.page_tree .item > div {
       padding-bottom: 2px; }
     .page .content.category .item > :empty, .page .content.page_tree .item > :empty {
@@ -250,6 +251,14 @@ p {
     .page .content.category .item img, .page .content.page_tree .item img {
       max-height: 290px;
       max-width: 290px; }
+    .page .content.category .item > .wphoto, .page .content.page_tree .item > .wphoto {
+      text-align: center;
+      width: 70px;
+      float: left; }
+    .page .content.category .item > .wphoto + div, .page .content.page_tree .item > .wphoto + div {
+      width: 200px;
+      padding-left: 10px;
+      float: left; }
   .page .content.category .item.category, .page .content.page_tree .item.category {
     background: url(/images/ui/subcat-arrow.png) 100% 50% no-repeat; }
   .page .content.category .item.leaf-name, .page .content.page_tree .item.leaf-name {
